[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/interface/intentory/item_background/type_1.png" type="Texture" id=1]
[ext_resource path="res://assets/font/bit_potion.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/interface/inventory/equipment_container.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "hide_container"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "show_container"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="EquipmentContainer" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -49.0
margin_right = 49.0
margin_bottom = -5.0
rect_min_size = Vector2( 44, 44 )
script = ExtResource( 6 )

[node name="ConsumableBackgroundTexture" type="TextureRect" parent="."]
margin_top = 12.0
margin_right = 20.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="Item" type="TextureRect" parent="ConsumableBackgroundTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 16, 16 )
expand = true

[node name="Amount" type="Label" parent="ConsumableBackgroundTexture"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = -1.0
rect_min_size = Vector2( 4, 0 )
custom_fonts/font = SubResource( 1 )
text = "9"
align = 2
valign = 1

[node name="VContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 44.0

[node name="WeaponBackgroundTexture" type="TextureRect" parent="VContainer"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 1 )

[node name="Item" type="TextureRect" parent="VContainer/WeaponBackgroundTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 16, 16 )
expand = true

[node name="ArmorBackgroundTexture" type="TextureRect" parent="VContainer"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
texture = ExtResource( 1 )

[node name="Item" type="TextureRect" parent="VContainer/ArmorBackgroundTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 16, 16 )
expand = true

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hide_container = SubResource( 4 )
anims/show_container = SubResource( 2 )

[connection signal="mouse_entered" from="ConsumableBackgroundTexture" to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="ConsumableBackgroundTexture" to="." method="on_mouse_exited"]
